Bug 403208 - Short name of favorite folder results in improperly shown number of unread messages
Summary: Short name of favorite folder results in improperly shown number of unread me...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: Git (master)
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-14 16:38 UTC by Dominik Smrž
Modified: 2019-08-30 13:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominik Smrž 2019-01-14 16:38:19 UTC
If you add a folder to your favorite folders and rename it to something short, the number indicating number of unread messages does not display properly in "List mode". To be precise the box where the number of unread messages is at most as long as the box for displaying the name (i.e. it shows "(12" instead of "(123)").

STEPS TO REPRODUCE
1. Add a folder to you via drag-n-drop
2. Let there (in the folder) be at least 10 unread messages
3. Rename the folder to something short like "a"
4. Choose list mode (right click favorites -> mode -> list mode)

OBSERVED RESULT
The number of unread messages is shorted. I.e. it shows "(12" instead of "(123)", sometimes it displays only half of a digit.

EXPECTED RESULT
To display number of unread messages in full

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.14
KDE Plasma Version: 5.14.5
Qt Version: 5.11.2
KDE Frameworks Version: 5.54.0
Kernel Version: 4.15.0-43-generic
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-4720HQ CPU @ 2.60GHz
Memory: 7,7 GiB of RAM
Comment 1 Laurent Montel 2019-03-10 14:12:21 UTC
Indeed i can reproduce it.
I will investigate soon.
Comment 2 Laurent Montel 2019-08-30 13:44:39 UTC
Git commit bebfedd536e62acf859b825a093a4eddcf7721f2 by Laurent Montel.
Committed on 30/08/2019 at 13:43.
Pushed by mlaurent into branch 'Applications/19.08'.

Fix Bug 403208 - Short name of favorite folder results in improperly shown number of unread messages

Thanks David for debugging it and providing a patch.

FIXED-IN: 5.12.1

M  +1    -1    src/widgets/collectionstatisticsdelegate.cpp

https://commits.kde.org/akonadi/bebfedd536e62acf859b825a093a4eddcf7721f2