Fix Bug 403208 - Short name of favorite folder results in improperly shown number of unread messages

Thanks David for debugging it and providing a patch.

FIXED-IN: 5.12.1
BUG: 403208